# cmicro

./: .gitignore  CMakeLists.txt  README.md
include/micro/app/: base-app.h  micro-app.h
include/micro/application/: micro-application.h
include/micro/core/: buffer.h  exception.h  message.h
include/micro/util/: array.h  queue.h
src/: array.c  base-app.cc  buffer.cc  exception.cc  message.cc  micro-app-handler-private.c  micro-app-handler-private.h  micro-app-handler.c  micro-app-handler.h  micro-app.cc  queue.c
test/: CMakeLists.txt
test/array/: create_array.c
test/buffer/: create_buffer.cc  push_pop.cc
test/exception/: buffer_overflow.cc  micro_exception.cc
test/queue/: create_queue.c  push_pop_queue.c
